Depurando el añadir procesos para que se añadan procesos manualmente y observe que cuando no existen procesos del sistema los procesos manuales se muestran perfectamente sin embargo si añades procesos despues de que hay del sistema no salen correctamente y es como si no se hubieran añadido, se les asigna un pid pero la prioridad la vuelve 0 y no los muesta

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,7 @@
         const socket = io();
 
         socket.on('proceso_nuevo', function (procesos) {
+            console.log('Nuevo proceso recibido:', procesos);
             const cuerpoTabla = document.getElementById('tabla-procesos').querySelector('tbody');
             procesos.forEach(proceso => {
                 const fila = document.createElement('tr');
@@ -119,4 +120,3 @@
     </script>
 </body>
 </html>
-
